--- a/Website/index.html
+++ b/Website/index.html
@@ -103,7 +103,7 @@
     {
         console.log(json);
     }
-    document.addEventListener("DOMContentLoaded", () => {loadData();});
+    document.addEventListener('DOMContentLoaded', () => {loadData();});
 </script>
 
 </body>
