--- a/Website/index.html
+++ b/Website/index.html
@@ -103,7 +103,18 @@
     {
         console.log(json);
     }
-    document.addEventListener('DOMContentLoaded', () => {loadData();});
+    if( document.readyState !== 'loading' ) 
+    {
+        console.log( 'document is already ready, just execute code here' );
+        loadData();
+    } else 
+    {
+        document.addEventListener('DOMContentLoaded', function () 
+        {
+            console.log( 'document was not ready, place code here' );
+            loadData();
+        });
+    }
 </script>
 
 </body>
