--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         {
             tableBody.removeChild(tableBody.firstChild);
         }
+
+        json.forEach((row) => {
+            console.log(row);
+        });
     }
     if( document.readyState !== 'loading' ) 
     {
