--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
         }
 
         json.forEach((row) => {
-            console.log(row);
+            row.forEach((cell) => {
+                console.log(cell);
+            });
         });
     }
     if( document.readyState !== 'loading' ) 
