--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     function loadData () 
     {
         const request = new XMLHttpRequest();
-        request.open("get","data/file.json");
+        request.open("get","program/dataprofile.json");
         request.onload = () => 
         {
             try 
