--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 <table id="myTable" class="table">
   <thead>
     <tr>
-        <th style="width:60%;">Name</th>
-        <th style="width:40%;">Country</th>
+        <th style="width:33%;">เรื่อง</th>
+        <th style="width:33%;">เรียน</th>
+        <th style="width:33%;">วันที่</th>
     </tr>
   </thead>
   <tbody>
