--- a/index.html
+++ b/index.html
@@ -37,6 +37,41 @@
 #myTable tr.header, #myTable tr:hover {
   background-color: #f1f1f1;
 }
+
+.thumbnail{
+position: relative;
+z-index: 0;
+}
+
+.thumbnail:hover{
+background-color: transparent;
+z-index: 50;
+}
+
+.thumbnail span{ /*CSS for enlarged image*/
+position: absolute;
+background-color: lightyellow;
+padding: 5px;
+left: -1000px;
+border: 1px dashed gray;
+visibility: hidden;
+color: black;
+text-decoration: none;
+}
+
+.thumbnail span img{ /*CSS for enlarged image*/
+border-width: 0;
+padding: 2px;
+}
+
+.thumbnail:hover span{ /*CSS for enlarged image on hover*/
+visibility: visible;
+top: 0;
+left: 60px; /*position where enlarged image should offset horizontally */
+
+}
+
+
 </style>
 </head>
 <body>
@@ -107,13 +142,28 @@
         {
             tableBody.removeChild(tableBody.firstChild);
         }
-
         json.forEach((row) => {
             const tr = document.createElement("tr");
+            var count = 0;
             row.forEach((cell) => {
-                const td = document.createElement("td");
-                td.textContent = cell;
-                tr.appendChild(td);
+                if (count === 3) {
+                    const imageHover = document.createElement('a');
+                    imageHover.className = "thumbnail";
+                    imageHover.href = "#thumb";
+                    imageHover.appendChild("Preview")
+                    const spanning = document.createElement('span');
+                    const imagesource = document.createElement('img');
+                    imagesource.src = cell;
+                    spanning.appendChild(imagesource);
+                    imageHover.appendChild(spanning);
+                    tr.appendChild(imageHover);
+                }
+                else{
+                    const td = document.createElement("td");
+                    td.textContent = cell;
+                    tr.appendChild(td);
+                }
+                count = count+1;
             });
             tableBody.appendChild(tr);
         });
