--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@ left: 60px; /*position where enlarged image should offset horizontally */
 <table id="myTable" class="table">
   <thead>
     <tr>
-        <th style="width:33%;">เรื่อง</th>
-        <th style="width:33%;">เรียน</th>
-        <th style="width:33%;">วันที่</th>
+        <th style="width:30%;">เรื่อง</th>
+        <th style="width:30%;">เรียน</th>
+        <th style="width:30%;">วันที่</th>
+        <th style="width:30%;">เอกสาร</th>
     </tr>
   </thead>
   <tbody>
