--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ left: 60px; /*position where enlarged image should offset horizontally */
                     const imageHover = document.createElement('a');
                     imageHover.className = "thumbnail";
                     imageHover.href = "#thumb";
-                    imageHover.textContent = "Preview"
+                    imageHover.textContent = "Preview";
                     const spanning = document.createElement('span');
                     const imagesource = document.createElement('img');
                     imagesource.src = cell;
