--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ left: 60px; /*position where enlarged image should offset horizontally */
             row.forEach((cell) => {
                 if (count === 3) {
                     const imagelink = document.createElement('a');
-                    imageHover.href = "https://raw.githubusercontent.com/WatcharachatMPBG/ImgPro-Project/master/program/docs/Capture.PNG";
-                    imageHover.textContent = "Preview";
+                    imagelink.href = "https://raw.githubusercontent.com/WatcharachatMPBG/ImgPro-Project/master/program/docs/Capture.PNG";
+                    imagelink.textContent = "Preview";
                     tr.appendChild(imagelink);
                 }
                 else{
